@@ -1,10 +1,17 @@
 package com.dazzle.asklepios.service;
 
 import com.dazzle.asklepios.domain.DuplicationCandidate;
-import com.dazzle.asklepios.domain.Facility;
+
 import com.dazzle.asklepios.repository.DuplicationCandidateRepository;
-import com.dazzle.asklepios.repository.FacilityRepository;
-import com.dazzle.asklepios.web.rest.vm.*;
+import com.dazzle.asklepios.web.rest.vm.DuplicationCandidateCreateVM;
+import com.dazzle.asklepios.web.rest.vm.DuplicationCandidateUpdateVM;
+import com.dazzle.asklepios.web.rest.vm.DuplicationCandidateResponseVM;
+
+import java.time.Instant;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.cache.annotation.CacheEvict;
@@ -12,9 +19,6 @@ import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.Instant;
-import java.util.List;
-import java.util.Optional;
 
 @Service
 @Transactional
@@ -23,55 +27,48 @@ public class DuplicationCandidateService {
     private static final Logger LOG = LoggerFactory.getLogger(DuplicationCandidateService.class);
 
     private final DuplicationCandidateRepository repository;
-    private final FacilityRepository facilityRepository;
 
-    public DuplicationCandidateService(DuplicationCandidateRepository repository,
-                                       FacilityRepository facilityRepository) {
+    public DuplicationCandidateService(DuplicationCandidateRepository repository) {
         this.repository = repository;
-        this.facilityRepository = facilityRepository;
     }
 
+    /**
+     * Create new candidate
+     */
     @CacheEvict(cacheNames = DuplicationCandidateRepository.CACHE_NAME, key = "'all'")
     public DuplicationCandidateResponseVM create(DuplicationCandidateCreateVM vm, String user) {
         LOG.debug("Request to create DuplicationCandidate : {}", vm);
 
-        DuplicationCandidate entity = new DuplicationCandidate();
-        entity.setDob(vm.dob());
-        entity.setLastName(vm.lastName());
-        entity.setDocumentNo(vm.documentNo());
-        entity.setMobileNumber(vm.mobileNumber());
-        entity.setGender(vm.gender());
-        entity.setActive(vm.active() != null ? vm.active() : true);
+        DuplicationCandidate candidate = new DuplicationCandidate();
+        candidate.setDob(vm.dob());
+        candidate.setLastName(vm.lastName());
+        candidate.setDocumentNo(vm.documentNo());
+        candidate.setMobileNumber(vm.mobileNumber());
+        candidate.setGender(vm.gender());
 
-
-        if (vm.facilityId() != null) {
-            Facility facility = facilityRepository.findById(vm.facilityId())
-                    .orElseThrow(() -> new IllegalArgumentException("Facility not found with id " + vm.facilityId()));
-            entity.setFacility(facility);
+        // generate role if not provided
+        String role = repository.findMaxRole();
+        if (role == null || role.isEmpty()) {
+            candidate.setRole("R001");
         } else {
-            entity.setFacility(null);
-        }
-
-
-        String lastRole = repository.findMaxRole();
-        if (lastRole == null || lastRole.isEmpty()) {
-            entity.setRole("R001");
-        } else {
-            int lastNumber = Integer.parseInt(lastRole.substring(1));
-            entity.setRole(String.format("R%03d", lastNumber + 1));
+            int lastNumber = Integer.parseInt(role.substring(1));
+            candidate.setRole(String.format("R%03d", lastNumber + 1));
         }
 
         // audit
-        entity.setCreatedBy(user != null ? user : "system");
-        entity.setCreatedDate(Instant.now());
+        candidate.setCreatedBy(user != null ? user : "system");
+        candidate.setCreatedDate(Instant.now());
 
-        DuplicationCandidate saved = repository.save(entity);
+        DuplicationCandidate saved = repository.save(candidate);
         return DuplicationCandidateResponseVM.ofEntity(saved);
     }
 
+    /**
+     * Update existing candidate
+     */
     @CacheEvict(cacheNames = DuplicationCandidateRepository.CACHE_NAME, key = "'all'")
     public Optional<DuplicationCandidateResponseVM> update(Long id, DuplicationCandidateUpdateVM vm, String user) {
-        LOG.debug("Request to update DuplicationCandidate id={} : {}", id, vm);
+        LOG.debug("Request to update DuplicationCandidate id={} with {}", id, vm);
 
         return repository.findById(id).map(existing -> {
             if (vm.dob() != null) existing.setDob(vm.dob());
@@ -79,12 +76,8 @@ public class DuplicationCandidateService {
             if (vm.documentNo() != null) existing.setDocumentNo(vm.documentNo());
             if (vm.mobileNumber() != null) existing.setMobileNumber(vm.mobileNumber());
             if (vm.gender() != null) existing.setGender(vm.gender());
-            if (vm.active() != null) existing.setActive(vm.active());
-            if (vm.facilityId() != null) {
-                Facility facility = facilityRepository.findById(vm.facilityId())
-                        .orElseThrow(() -> new IllegalArgumentException("Facility not found with id " + vm.facilityId()));
-                existing.setFacility(facility);
-            }
+
+
 
             existing.setLastModifiedBy(user != null ? user : "system");
             existing.setLastModifiedDate(Instant.now());
@@ -93,44 +86,40 @@ public class DuplicationCandidateService {
             return DuplicationCandidateResponseVM.ofEntity(updated);
         });
     }
-
+    /**
+     * Get all candidates
+     */
     @Transactional(readOnly = true)
+    @Cacheable(cacheNames = DuplicationCandidateRepository.CACHE_NAME, key = "'all'")
     public List<DuplicationCandidateResponseVM> findAll() {
         LOG.debug("Request to get all DuplicationCandidates");
-        return repository.findAll().stream()
-                .map(DuplicationCandidateResponseVM::ofEntity)
-                .toList();
-    }
-
-    @CacheEvict(cacheNames = DuplicationCandidateRepository.CACHE_NAME, key = "'all'")
-    public boolean deactivate(Long id, String user) {
-        LOG.debug("Request to deactivate DuplicationCandidate : {}", id);
-        return repository.findById(id).map(existing -> {
-            existing.setActive(false);
-            existing.setLastModifiedBy(user != null ? user : "system");
-            existing.setLastModifiedDate(Instant.now());
-            repository.save(existing);
-            return true;
-        }).orElse(false);
-    }
-
-    public boolean reactivate(Long id, String user) {
-        LOG.debug("Request to reactivate DuplicationCandidate : {}", id);
-        return repository.findById(id).map(existing -> {
-            existing.setActive(true);
-            existing.setLastModifiedBy(user != null ? user : "system");
-            existing.setLastModifiedDate(Instant.now());
-            repository.save(existing);
-            return true;
-        }).orElse(false);
-    }
-
-    public List<DuplicationCandidateResponseVM> findByRoleFilter(String roleFilter) {
-        return repository.findByRoleContaining(roleFilter) // أو findByRoleStartingWith(roleFilter)
+        return repository.findAll()
                 .stream()
                 .map(DuplicationCandidateResponseVM::ofEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    /**
+     * Get one candidate by id
+     */
+    @Transactional(readOnly = true)
+    public Optional<DuplicationCandidateResponseVM> findOne(Long id) {
+        LOG.debug("Request to get DuplicationCandidate : {}", id);
+        return repository.findById(id)
+                .map(DuplicationCandidateResponseVM::ofEntity);
+    }
+
+    /**
+     * Delete candidate
+     */
+    @CacheEvict(cacheNames = DuplicationCandidateRepository.CACHE_NAME, key = "'all'")
+    public boolean delete(Long id) {
+        LOG.debug("Request to delete DuplicationCandidate : {}", id);
+        if (!repository.existsById(id)) {
+            return false;
+        }
+        repository.deleteById(id);
+        return true;
+    }
 
 }
